# ChangeLog for sci-mathematics/maxima
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.118 2015/03/29 14:00:50 zlogene Exp $

  29 Mar 2015; Mikle Kolyada <zlogene@gentoo.org> maxima-5.34.1.ebuild:
  x86 stable wrt bug #406773

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> maxima-5.34.1.ebuild:
  Stable for amd64, wrt bug #406773

*maxima-5.35.1-r1 (25 Dec 2014)

  25 Dec 2014; Andrey Grozin <grozin@gentoo.org> -maxima-5.35.1.ebuild,
  +maxima-5.35.1-r1.ebuild:
  5.35.1 tarball contains a wrong sys-proclaim.lisp; re-generate it (only
  affects gcl)

  22 Dec 2014; Andrey Grozin <grozin@gentoo.org> +files/wish-1.patch:
  Adding a missing patch (#533202)

*maxima-5.35.1 (20 Dec 2014)

  20 Dec 2014; Andrey Grozin <grozin@gentoo.org> +maxima-5.35.1.ebuild,
  +files/clozurecl-1.patch:
  Version bump

*maxima-5.34.1 (14 Sep 2014)

  14 Sep 2014; Andrey Grozin <grozin@gentoo.org> +maxima-5.34.1.ebuild:
  Version bump, no einstall (#521650), docompress (#176411)

*maxima-5.34.0 (28 Aug 2014)

  28 Aug 2014; Andrey Grozin <grozin@gentoo.org> +maxima-5.34.0.ebuild:
  Version bump

  03 Aug 2014; Andrey Grozin <grozin@gentoo.org> maxima-5.33.0.ebuild:
  Default lisp on arm is now gcl

*maxima-5.33.0 (06 Apr 2014)

  06 Apr 2014; Andrey Grozin <grozin@gentoo.org> -maxima-5.32.1.ebuild,
  +maxima-5.33.0.ebuild:
  Version bump

*maxima-5.32.1-r1 (29 Jan 2014)

  29 Jan 2014; Andrey Grozin <grozin@gentoo.org> +maxima-5.32.1-r1.ebuild,
  +files/ecls-1.patch:
  Fix the library version of the ecls maxima needed by sage (bug #499634),
  thanks to Martin von Gagern <Martin.vGagern@gmx.net>

*maxima-5.32.1 (11 Jan 2014)

  11 Jan 2014; Andrey Grozin <grozin@gentoo.org> +maxima-5.32.1.ebuild:
  Version bump

*maxima-5.31.2 (14 Oct 2013)

  14 Oct 2013; Andrey Grozin <grozin@gentoo.org> +maxima-5.31.2.ebuild:
  Version bump

*maxima-5.30.0-r2 (01 Jul 2013)
