@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install postinst postrm prepare setup
+DEPEND=X? ( x11-misc/xdg-utils sci-visualization/gnuplot[gd] tk? ( dev-lang/tk ) ) latex? ( virtual/latex-base ) emacs? ( virtual/emacs latex? ( app-emacs/auctex ) ) xemacs? ( app-editors/xemacs latex? ( app-emacs/auctex ) ) clisp? ( dev-lisp/clisp:= ) clozurecl? ( dev-lisp/clozurecl:= app-misc/rlwrap ) ecls? ( dev-lisp/ecls:= app-misc/rlwrap ) gcl? ( dev-lisp/gcl:= ) cmucl? ( dev-lisp/cmucl:= app-misc/rlwrap ) sbcl? ( dev-lisp/sbcl:= app-misc/rlwrap ) !clisp? ( !clozurecl? ( !ecls? ( !gcl? ( !cmucl? ( dev-lisp/sbcl:= app-misc/rlwrap ) ) ) ) ) sys-apps/texinfo !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=Free computer algebra environment based on Macsyma
+EAPI=5
+HOMEPAGE=http://maxima.sourceforge.net/
+IUSE=latex emacs tk nls unicode xemacs X sbcl cmucl gcl ecls clozurecl clisp linguas_es linguas_pt linguas_pt_BR
+KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
+LICENSE=GPL-2
+PDEPEND=emacs? ( app-emacs/imaxima )
+RDEPEND=X? ( x11-misc/xdg-utils sci-visualization/gnuplot[gd] tk? ( dev-lang/tk ) ) latex? ( virtual/latex-base ) emacs? ( virtual/emacs latex? ( app-emacs/auctex ) ) xemacs? ( app-editors/xemacs latex? ( app-emacs/auctex ) ) clisp? ( dev-lisp/clisp:= ) clozurecl? ( dev-lisp/clozurecl:= app-misc/rlwrap ) ecls? ( dev-lisp/ecls:= app-misc/rlwrap ) gcl? ( dev-lisp/gcl:= ) cmucl? ( dev-lisp/cmucl:= app-misc/rlwrap ) sbcl? ( dev-lisp/sbcl:= app-misc/rlwrap ) !clisp? ( !clozurecl? ( !ecls? ( !gcl? ( !cmucl? ( dev-lisp/sbcl:= app-misc/rlwrap ) ) ) ) )
+SLOT=0
+SRC_URI=mirror://sourceforge/maxima/maxima-5.36.0.tar.gz
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	elisp-common	1aa23b3de5dae55456fa2071428eb5bf	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=641224c089ae6808fc93fb995d6a22dd
