@@ -44,6 +44,7 @@ DIST maxima-5.33.0.tar.gz 28756677 SHA256 e2af6c85f782de95933ee77f47440976be7862
 DIST maxima-5.34.0.tar.gz 29230417 SHA256 a9a613a225deefa47cebdeff2ca212191e11ab449d0d17cd64aebf4b4f096052 SHA512 9b768f5812f5aa8ea0b21d3c98216e99ec4936735da8ba283af90906bb37ef8935d277706dfde03c05034c1a0d0c3922b8252b2428e7d0e30d580432a141540b WHIRLPOOL d5b86e5a4fb343fff6debb4d7a26862db62b3133d36b159a2b1a21ed8c5a586d85978e7c762cb7cbd27b34b566ba5c6b296433d448e697f25583c5f8cee32c3f
 DIST maxima-5.34.1.tar.gz 29469851 SHA256 20ca416ca912c8d3d99299f2ef45342a1beb2f077cf501c6a647de46bfdb89b7 SHA512 24a9ce0d2bfb0fa107460bbeec561869f9d3f2ce2623e39ab16b810dbf2712981bbf98ceee9c30f4e70fdec7f918a7743b5fb8cf26b67313e1d367dd8f2a1823 WHIRLPOOL 0f59cfe14391686a543027bb5cab8669439d0e36b016924872662f61e36cf05663480f8a3f942d7deccbe39ec7f45ed77deeb8a3c84241189ac0f1993537c47a
 DIST maxima-5.35.1.tar.gz 29596145 SHA256 9ed1a996afdf7410a932842801c954c53b003983d07bafd7a1ea999fbcda98f3 SHA512 6a57ca5a4224f12f19863365f30fc87959a62787a4679ad3b1d9f180b86e5925b0af44aaffc4e1013dcb2f4fd4e88524d8eb8e8b0a501e1ebb6f2f3dbac19b17 WHIRLPOOL cc7b1aeb950a93df4e42690f713c090cc7ddb6a8e7f5789ea07017a6dd5984fe97b299eeb50efef0d764b2ff6aff0e6f4ec4b517446b663121ea14a62e375595
+DIST maxima-5.36.0.tar.gz 29614204 SHA256 3c854396ec9e6dbf72c2d37dfa629b6ea10aa2adee8763b92088f6ac4c31e479 SHA512 8ddb95d713261b9b2262f07e422da8b04c56734ea7e004eca1fd026baed3c30f5382ba3fcad5f8f090b5e1b300121049d2e6f98dacbe4ef791cf8ada06859b56 WHIRLPOOL 71abd9134617a851e0dfbfdf55149542b9ba15bad8f2f27be8322d9e721b5b198d2c0b53364139b69e0f0b7cd9ccef51529a4bf0db21fa0a2c2f8c3b3bfac962
 EBUILD maxima-5.18.1.ebuild 4197 SHA256 8a94a0d0b12ba9e2e99968e9dff248b8d18403b2eddbcab6305805e1e211b662 SHA512 eeea8f30bf5c1c467df82823fdd0c467926648d2a598819c8aca32e56c7969303f465458fa0d42d4c26fd2684068f59048ec049a56e26d1b932e56e32aae02d0 WHIRLPOOL 8900e30c855159771d13d25566c4d06b62f9cbcf10ccd18b0bc20e7558147233c8d49d3d99c5d2bf3d2ac1577fac99c9071188ec2d4ee85cc3c155c6897cf852
 EBUILD maxima-5.26.0.ebuild 5129 SHA256 8130e9712676683448c77b90ff1fc4cad86825c34a1b2248ae083e706e6c6195 SHA512 ca5d2b94ad655f1e1c0d71e7c539d3ec066c962d8db3df3cafdc0ad9661c6615bc4c883d28a99df092b1acc279dd3291e4a4d44faf48ae218e28d9139e799bb5 WHIRLPOOL 729d6faf262496d3767cff8f81ad83af9fe7355cd52a2fe504e43860c2a3eaf90b018e3e2d9755583039f4c7ea0f038d1826e52ac138dda9260dd36db35e1e3e
 EBUILD maxima-5.27.0-r1.ebuild 5129 SHA256 fe5955c77a5847ca43eae978462f6b74d3c29b898c9ebee84b977edaffc8142f SHA512 fb992509f3296a5d19cbd04201b010cbeb5ccaab930f0f3803d28544fab590b3340eed77cbe34d8575c02d976a52ef3bcbdc15b958c165efc160a06bf85fff14 WHIRLPOOL 1c47a6275faa0ee3178fe6f828accf3a207455091148d23bcfd8326b2279d1a81b3fe8b9fae30ae9d23441d8e9583a1d3047ac4722f909f365469ece7e5022f7
@@ -56,14 +57,25 @@ EBUILD maxima-5.33.0.ebuild 4533 SHA256 ba8258938d8639a0ca9a1644cd1207d1f6ba5a4a
 EBUILD maxima-5.34.0.ebuild 4533 SHA256 9268e394f55dffbecaa484dc0eb27d0a1826228cd47f31322a11a1accdbca926 SHA512 4f745650413097213b2ace3182227870f6b3cfc169ea4a02212f8850ba32ed78262710913bc0688beccf7e8ac00dc14ca3049b801579b19249ce03615052b8f3 WHIRLPOOL f28c1d54344b92c12b99599c0d724c713e0ae9e43dd89ad4dd407c4d2fcf07d33cb630fd0f70a65e0423d16103fdeeca199632914a8b80c2e5a67c1cbd19dfc2
 EBUILD maxima-5.34.1.ebuild 4377 SHA256 f9b8a34ff2a6b30957515982e272a561c32649ab418ced32faa4208ca7e0920d SHA512 64ed1e1e1b02bda838043efad50331cef9fadca5c59d1c9184390e1d453b378ec4666969c3c034035537325cf78ada65dc473a009274f74d7323a48e5ba39841 WHIRLPOOL 582dfcac2f9052ec82d865067f743216600aecc57586bcb94c44e8d8f58f595964451c69c0bf707c678b7f80fd045d94222b02624d904a3a888f0eea2e6b90ea
 EBUILD maxima-5.35.1-r1.ebuild 4517 SHA256 6618ec5e439e0742a8d69226d7bb6fea386b020537bc26f93dae591b7b432cd9 SHA512 8628c65591079709e138d9cb2d83a63d7412021a205bbbb40a77b593a8edd17a97926ad3186860c0de6f744a13c68617a247bd11e5c5f7c09c87cc058c2e3d20 WHIRLPOOL a0375ce86c12d6ab25449b11f87b655773644fa42749184d34acc71b2641d9069399a0601c89ce6042a32714015c1988f43ec0b07d6ff83ed18c8af0e9f806f6
-MISC ChangeLog 25988 SHA256 9a2484d3f0b1dce7a50a7e7ff7f9f86ceac91a1db2b7e5238088df0891efe225 SHA512 331942ad95e8ff654bbaa92fd3edca101c29fb014afa94181eaa305263cf49c4eac8fc035f9d5798430597297f154ca0c8c240cbf4c631c9811c43ed4c657fc1 WHIRLPOOL b1623f63e02b8d745849972b028bf305a8724138e61c19f20a3e3bb91f763f2d298f54f984db7d123a80898be9183468c29774ef9183aaf5ef7128ef7a033322
+EBUILD maxima-5.36.0.ebuild 4514 SHA256 6aab7c93392803fb050093fc3ffc0f2ffe7676c0f8d9181fbbe9b25e0e766220 SHA512 e52c95816d77ed29f2db836d221b4e41f0bbe8e087953802093b2dac0ec5f9e2ba7eff11010f641382a0fdf4945765bafee0d95c2d816302d975f32d484fbcf2 WHIRLPOOL 4a3cc4e4a567611044c60308990a14466c8305c1094d471d3c2133cd0384d20b7200f25780e591d8935d7a6b2a673b217e39c554e2c51f4b5c7c21c3811a2651
+MISC ChangeLog 26105 SHA256 166057f2300949e26f1c8ad13c8641d78a5e08a830176788f61530cc617eaf23 SHA512 224f6ce57c0ada0cdb2a07d4ec0e015d4b4d6d50b52b3e98d7f65ffd799ff092078d4740356c1f4eace009ca677e41d059e9fb5b414f399fa47cd85fe4f19f38 WHIRLPOOL 6c95c6788c0387788add7f85270cadaee2be00bf218d62791d58df54ad33e74f96ed930f01319097499fb1798dbf401dc9ec15bfa3c852f2f1ddcbac35e07c65
 MISC metadata.xml 1316 SHA256 c5b7768087c365de73e5fe1458c72155134c0db19d6d9e22527e7dc0c5f99f50 SHA512 b7a7af7e6342b140b1d2a09ecb3a4a59107fe23bf0bfb63ca8c344e5960d7f3ac64e0b19f516333e34ab878e82fef58bdb447c0110058b09aa66870ba2f836a7 WHIRLPOOL 3cae3e8642d61d403bc5f82d5471c3b4d48670bcabec9af35309f95dfe4bba7306581d7e8f38f4dd7c45da9d56d0eec92fc71a7a7cff778ea78673fe5b857385
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iJwEAQEIAAYFAlUYBSQACgkQG9wOWsQutdawigQArNRkHcCbmmT/vga4W/IuQDqK
-6jed0V8J3eR7uZCHZ7j6l83VDlflwYqKQ2EZcHcaDTEndepgmB2rVkhw3PIpMdef
-HyFpDSs5okNOz6xxcbi++TSIAPHbuhYGBui1F2EeuqmUWspH7g1XE3r25uW4TrYk
-C+mFHsz23r+x/01wc/w=
-=+RUW
+iQJ8BAEBCABmBQJVL8aUXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwOEM0RURGNjY5QzVBNjMwRkU3REVCOTQz
+QUZGQ0U5NzREMzRCRDhDAAoJEDr/zpdNNL2MiScP/3SYr+WoNtVMeEVf3WBUPXrg
+thy4HAqFl7mbj4CPirgNGmmgn8uBlbrUbSQlXYQVzwg6SDluxb1axt7Al3PjKKxy
+7yY/aa5uhj/A73a0QuacAMmpSAuQE10e4W9FJSYECUbEPePw5jTdKzo8Yj8sEvr7
+r7WqNxJ8VvSkSbFMDRbUt4SeEDYt5SZddeoGD04yhuhCx6/n3cZERzgWqSzhebqv
+72VMCjogjaYcjCj2fjRH9PfGy/SPzfK0UCaMgGX0bHUq8JJ3P+5T/TczMHbA/Coe
+S/++Ncq9QfTXD4Mj3uwfkKaxm/6YTMEobk4iiwZd1tcLU9kydLCn5PNi0Al0LJsf
+ch5K/U+g9T3/pa9lShD0/zH6q0Mm4Kv0B1f0YUPc6AGxHhnfX8cn3FJjBwcTSl61
+g4ygkqTpqe1hkPqfPb305tNYrwvgljSgFAzT3ii9wOqRdfwbmDu9xEeHhX7P6Td7
+o2u5mt/kexnAJ6qUwxyeitbkUsJrFXbrJcqbgBncWJswtp2CXE5bzjPb/D4f8AKp
+AAE1I7NQ1Dh72SWdM2Uayvn+r+ar7pjL2rlcSmqB/rAc8kddmZrzH4OWxDU+/dQG
+1U3pUzqDge9y4KjoHsAzVIPWf6ejsRtzZtvPUIffc/IXd1p1maZpK/sigvCLXLep
+cgZp3nTgBolC9uvAPyAr
+=Wp8a
 -----END PGP SIGNATURE-----
