@@ -1,6 +1,11 @@
 # ChangeLog for sci-mathematics/maxima
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.118 2015/03/29 14:00:50 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.119 2015/04/16 14:25:34 grozin Exp $
+
+*maxima-5.36.0 (16 Apr 2015)
+
+  16 Apr 2015; Andrey Grozin <grozin@gentoo.org> +maxima-5.36.0.ebuild:
+  Version bump
 
   29 Mar 2015; Mikle Kolyada <zlogene@gentoo.org> maxima-5.34.1.ebuild:
   x86 stable wrt bug #406773
